<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultView"
            app:layout_constraintVertical_bias="0.85">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/clearBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="clearBTN"
                    android:text="@string/clear"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button19"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/divideBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/operand"
                    android:onClick="divideBTN"
                    android:text="@string/divide"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/sevenBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="sevenBTN"
                    android:text="@string/seven"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/eightBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="eightBTN"
                    android:text="@string/eight"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/nineBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="nineBTN"
                    android:text="@string/nine"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/multiplyBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/operand"
                    android:onClick="multiplyBTN"
                    android:text="@string/multiply"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/fourBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="fourBTN"
                    android:text="@string/four"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/fiveBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="fiveBTN"
                    android:text="@string/five"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/sixBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="sixBTN"
                    android:text="@string/six"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/subtractBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/operand"
                    android:onClick="subtractBTN"
                    android:text="@string/subtract"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/oneBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="oneBTN"
                    android:text="@string/one"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/twoBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="twoBTN"
                    android:text="@string/two"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/threeBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="threeBTN"
                    android:text="@string/three"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/addBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/operand"
                    android:onClick="addBTN"
                    android:text="@string/add"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/zeroBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/circle"
                    android:onClick="zeroBTN"
                    android:text="@string/zero"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/periodBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="pointBTN"
                    android:text="@string/point"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/equalsBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/operand"
                    android:onClick="equalsBTN"
                    android:text="@string/equals"
                    android:textSize="25sp" />
            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/resultView"
            android:layout_width="411dp"
            android:layout_height="120dp"
            android:layout_marginTop="84dp"
            android:autofillHints="false"
            android:inputType="none"
            android:text="@string/results"
            android:textAlignment="textEnd"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />


</androidx.drawerlayout.widget.DrawerLayout>